--- a/app/views/post_images/index.html.erb
+++ b/app/views/post_images/index.html.erb
@@ -18,7 +18,7 @@
                 <%= image_tag('sample-author1.jpg', class: "img-circle pull-left profile-thumb") %>
                 <h3 class="block-title">
                   <%= link_to post_image_path(post_image.id) do %>
-                     <%= attachment_image_tag post_image, :image %>
+                     <i class="fa fa-map-marker"></i><%= post_image.shop_name %>
                   <% end %>
                 </h3>
                 <p><%= post_image.caption %></p>
@@ -27,13 +27,14 @@
                     <%= post_image.user.name %>
                   </li>
                   <li>
-                    <a href="#">23 コメント</a>
+                    <%= link_to "#{post_image.post_comments.count}コメント", post_image_path(post_image.id) %>
                   </li>
                 </ul>
               </div>
             </div>
           </div>
           <% end %>
+          <%= paginate @post_images,class: "paginate" %>
         </div>
       </div>
     </div>
