--- a/app/views/post_images/index.html.erb
+++ b/app/views/post_images/index.html.erb
@@ -17,7 +17,7 @@
               </div>
 
               <div class="block-content">
-                <%= image_tag('sample-author1.jpg', class: "img-circle pull-left profile-thumb") %>
+                <%= attachment_image_tag post_image.user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg", class:"img-circle pull-left profile-thumb" %>
                 <h3 class="block-title">
                      <i class="fa fa-map-marker"></i><%= post_image.shop_name %>
                 </h3>
