--- a/app/views/post_images/new.html.erb
+++ b/app/views/post_images/new.html.erb
@@ -8,6 +8,7 @@
             <div class="section-title-wrapper style-1 v1">
               <h3 class="section-title section-title-sm left">
                 <span>画像投稿フォーム</span>
+                <h1 class="jquery">Hello jQuery!</h1>
               </h3>
             </div>
         <%= form_for(@post_image, url: post_images_path) do |f| %>
